# lux

./: .gitignore  2  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  flake.nix  lux.toml  release-plz.toml
.cargo/: config.toml
.config/: hakari.toml
.github/: PULL_REQUEST_TEMPLATE.md  merge_changelogs.py
.github/workflows/: cd-binstall.yml  cd-luarocks.yml  cd.yml  dist-package-dry-run.yml  integration-msvc.yml  integration-tests.yml  merge-changelogs.yml  nix-build.yml  release-plz.yml  update-flake-lock.yml
.serena/: project.yml
lux-cli/: CHANGELOG.md  Cargo.toml
lux-cli/resources/test/loose-lua/: notes.txt
lux-cli/resources/test/loose-lua/nested/: b.lua
lux-cli/resources/test/sample-projects/loose-lua/: a.lua
lux-cli/resources/test/sample-projects/stylua-config/: lux.toml
lux-cli/resources/test/sample-projects/stylua-config/src/: main.lua
lux-cli/resources/test/sample-projects/unformatted/src/: main.lua
lux-cli/src/: add.rs  args.rs  build.rs  check.rs  completion.rs  config.rs  debug.rs  dependencies.rs  doc.rs  download.rs  exec.rs  fetch.rs  format.rs  generate_rockspec.rs  info.rs  install.rs  install_lua.rs  install_rockspec.rs  lib.rs  lint.rs  list.rs  outdated.rs  pack.rs  path.rs  pin.rs  progress.rs  purge.rs  remove.rs  run.rs  run_lua.rs  search.rs  shell.rs  sync.rs  test.rs  toolchains.rs  uninstall.rs  unpack.rs  update.rs  upload.rs  vendor.rs  (+2 more)
lux-cli/src/debug/: toolchains.rs
lux-cli/src/project/: debug.rs  new.rs
lux-cli/src/utils/: addons.rs  error.rs  github_metadata.rs  install.rs  mod.rs  path.rs  project.rs
lux-definitions/: Cargo.toml
lux-definitions/src/: main.rs
lux-lib/: CHANGELOG.md  Cargo.toml
lux-lib/resources/test/: tree-sitter-tmux-scm-1.rockspec
lux-lib/resources/test/sample-projects/busted-nlua/: lux.toml
lux-lib/resources/test/sample-projects/c-src/: lux.toml
lux-lib/resources/test/sample-projects/c-src/src/: foo.c  main.lua
lux-lib/resources/test/sample-projects/dependencies/: lux.toml
lux-lib/resources/test/sample-projects/extra-rockspec/: lux.toml
lux-lib/resources/test/sample-projects/lockfile-missing-deps/: lux.toml
lux-lib/resources/test/sample-projects/multi-project/: lux.toml
lux-lib/resources/test/sample-projects/multi-project-local-deps/projects/bar/: lux.toml
lux-lib/resources/test/sample-projects/multi-project-local-deps/projects/bar/src/: main.lua
lux-lib/resources/test/sample-projects/multi-project/projects/bar/: lux.toml
lux-lib/resources/test/sample-projects/multi-project/projects/bar/src/: main.lua
lux-lib/resources/test/sample-projects/multi-project/projects/foo/: lux.toml
lux-lib/resources/test/sample-projects/no-build-spec/: foo-1.0.0-1.rockspec  lux.toml
lux-lib/resources/test/sample-projects/only-src/: lux.toml
lux-lib/resources/test/sample-projects/source-template/: lux.toml
lux-lib/src/: dependencies.rs  hash.rs  lib.rs  logging.rs  lua.rs  path.rs  progress.rs  reqwest.rs  toolchains.rs  variables.rs
lux-lib/src/config/: mod.rs  tree.rs
lux-lib/src/fs/: mod.rs  sync.rs  tempfile.rs  tokio.rs
lux-lib/src/git/: mod.rs  shorthand.rs  url.rs  utils.rs
lux-lib/src/lockfile/: mod.rs
lux-lib/src/lua_installation/: mod.rs
lux-lib/src/lua_rockspec/: dependency.rs  deploy.rs  mod.rs  partial.rs  platform.rs  rock_source.rs  serde_util.rs  test_spec.rs
lux-lib/src/lua_version/: mod.rs
lux-lib/src/luarocks/: install_binary_rock.rs  luarocks_installation.rs  rock_manifest.rs
lux-lib/src/manifest/: luanox.rs  luarocks.rs  metadata.rs  metadata_from_server.rs  metadata_from_vendor_dir.rs  mod.rs
lux-lib/src/operations/: build_lua.rs  build_project.rs  build_workspace.rs  deps.rs  dist_bin.rs  download.rs  exec.rs  fetch.rs  fetch_vendored.rs  gen_luarc.rs  install_dependencies.rs  install_project.rs  mod.rs  pack.rs  pin.rs  resolve.rs  run.rs  run_lua.rs  sync.rs  test.rs  uninstall.rs  unpack.rs  update.rs  vendor.rs
lux-lib/src/operations/install/: mod.rs  spec.rs
lux-lib/src/package/: mod.rs  outdated.rs  version.rs
lux-lib/src/project/: gen.rs  mod.rs  project_toml.rs
lux-lib/src/remote_package_db/: mod.rs
lux-lib/src/remote_package_source/: mod.rs
lux-lib/src/rockspec/: lua_dependency.rs  mod.rs
lux-lib/src/tree/: dist.rs  list.rs  mod.rs
lux-lib/src/upload/: mod.rs
lux-lib/src/which/: mod.rs
lux-lib/src/workspace/: mod.rs  workspace_toml.rs
lux-lib/tests/: build.rs  build_lua.rs  build_workspace.rs  dist_bin.rs  exec.rs  install.rs  luarocks_installation.rs  pack.rs  sync.rs  test.rs  tree.rs  vendor.rs
lux-lua/: Cargo.toml
lux-lua/src/: config.rs  definitions.rs  lib.rs  loader.rs  logging.rs  lua_impls.rs  operations.rs  project.rs  workspace.rs
lux-lua/tests/: pack.rs  tree.rs
lux-macros/: CHANGELOG.md  Cargo.toml
lux-macros/src/: lib.rs
lux-workspace-hack/: Cargo.toml
nix/: overlay.nix
xtask/: Cargo.toml
xtask-lua/: Cargo.toml
xtask-lua/src/: lib.rs
xtask/src/: main.rs
