[workspace]
members = [
  "lux-lib",
  "lux-cli",
  "lux-lua",
  "lux-macros",
  "lux-workspace-hack",
  "xtask",
  "xtask-lua",
]
default-members = ["lux-cli", "lux-lib"]
resolver = "2"

[workspace.package]
version = "0.28.4"

[workspace.dependencies]
mlua = { version = "0.11", features = [
  "serialize",
  "macros",
  "error-send",
  "async",
] }
git-url-parse = "0.6"
git2 = "0.20"
ignore = "0.4"
indicatif = "0.18"
itertools = "0.14"
lux-workspace-hack = { version = "0.1", path = "./lux-workspace-hack" }
lux-macros = { version = "0.1", path = "./lux-macros" }
path-absolutize = "3.1"
path-slash = "0.2"
pathdiff = "0.2"
serde_json = { version = "1.0", features = ["preserve_order"] }
strum = { version = "0.28" }
strum_macros = "0.28"
stylua = { version = "2.3", features = [
  "fromstr",
  "luau",
  "lua52",
  "lua53",
  "lua54",
  "luajit",
  "editorconfig",
] }
target-lexicon = "0.13"
tempfile = "3.27"
toml = "1.0"
tokio = { version = "1.52", features = ["full"] }
walkdir = "2.5"
which = "8.0"

[profile.release]
lto = true
codegen-units = 1
