[package]
name = "lux-lua"
version.workspace = true
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
lux-workspace-hack = { workspace = true }
mlua = { workspace = true }
path-absolutize = { workspace = true }
itertools = { workspace = true }
path-slash = { workspace = true }
serde = { version = "1", features = ["derive"] }
ssri = "9.2"
url = "2.5"
serde-enum-str = "0.5.0"

[dependencies.lux-lib]
version = "0.36.0"
path = "../lux-lib"
default-features = false

[dev-dependencies]
assert_fs = "1.1"
tokio = { workspace = true }
zip = "8.5"

[features]
lua51 = ["mlua/module", "mlua/lua51"]
lua52 = ["mlua/module", "mlua/lua52"]
lua53 = ["mlua/module", "mlua/lua53"]
lua54 = ["mlua/module", "mlua/lua54"]
lua55 = ["mlua/module", "mlua/lua55"]
luajit = ["mlua/module", "mlua/luajit"]
vendored = ["lux-lib/vendored-openssl", "lux-lib/vendored-libgit2"]
# Run tests without module mode so we can link against Lua and run the tests.
test = ["mlua/vendored", "mlua/lua51"]
ssh-tests = ["lux-lib/ssh-tests"]

[lints.clippy]
panic = "warn"
unwrap_used = "warn"
expect_used = "warn"
