[package]
name = "lux-macros"
version = "0.1.0"
edition = "2021"
description = "Proc-macro crate for lux"
repository = "https://github.com/lumen-oss/lux"
homepage = "https://lux.lumen-labs.org"
license = "LGPL-3.0+"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2", features = ["full"] }
quote = "1"
proc-macro2 = "1"
lux-workspace-hack = { version = "0.1", path = "../lux-workspace-hack" }
